# idf-generator

./: ana_client.py  app.py  disaggregation.py  idf.py  map_view.py  plots.py  pyproject.toml  report.py  requirements.txt  stations.py
